--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
         </div>
     </div>
 
-
     <div class="pajamagirl">
         <p id="sale60">NEW ARRIVAL SALE UP TO 60% OFF</p>
-        <p id="men">Men sale</p>
-        <p id="women">Women sale</p>
+        <p id="men">Men's sale</p>
+        <p id="women">Women's sale</p>
     </div>
 
     <div class="pajamamen">
