--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a id="women" href="Women.html">Women</a>
         <a id="sale" href="sale.html" id="sale">Sale</a>
         <img src="./resources/images/logo.png" alt="Sleep logo">
-        <div class="Container">
+        <div class="container">
             <form action="">
                 <input type="text" id="searchbox" placeholder="Search..." name="q">
                 <button type="submit"><img src="./resources/images/search.png" alt="search button"></button>
@@ -35,7 +35,7 @@
     <div class="newsletter">
         <h1>Sign-Up For Our Newsletter</h1>
         <p>Subscribe now to be the first to know about upcoming releases, new arrivals, and exclusive sales.</p>
-        <div class="Container">
+        <div class="container">
             <form action="">
                 <input type="text" placeholder="Email" name="w">
                 <button type="submit">Subscribe</button>
